<resources>
    <string name="app_name">Memento</string>
    <string name="header_main">Здравствуйте, %s!</string>
    <string name="forecast">В среднем человек вашего возраста, пола и привычек доживет до %s года.</string>
    <string name="invitation">Вы можете перейти к заполнению анкеты</string>
    <string name="clear">Очистить Профиль</string>
    <string name="update">Вновь пройти опрос</string>
    <string name="start">Пройти опрос</string>
    <string name="general">Для определения продолжительности жизни нужно ответить на ряд вопросов. \nВы можете перейти к заполнению анкеты</string>
    <string name="username">Пользователь</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="unknown">Нет ответа</string>
    <string name="prev">Назад</string>
    <string name="next">Вперед</string>
    <string name="name">Имя или ник</string>
    <string name="introduction">Представьтесь, введите год и месяц своего рождения и пол</string>
    <string name="year">Год рождения</string>
    <string name="to_questionnaire">Перейти к анкете</string>
    <string name="save">Сохранить</string>
    <string name="male">Муж</string>
    <string name="female">Жен</string>
    <string name="limit_age">Введите корректную дату рождения</string>
    <string name="mail">just mail</string>
    <string name="skip">пропустить остальное и сохранить</string>
    <string name="weight">Ваш вес, кг</string>
    <string name="height">Ваш рост, см</string>
    <string name="limit_gender">Определитесь с полом</string>
    <string name="bmi">Ваш индекс массы тела составляет %.1f</string>
    <string name="calculate">Рассчитать индекс массы тела</string>
    <string name="to_weight">Продолжить</string>
    <string name="bmi_valid">Введите корректные данные веса и роста</string>
    <string name="label_weight">Вес</string>
    <string name="label_height">Рост</string>
    <string name="new_habit">Новая привычка</string>
    <string name="non_active">Не активна</string>
    <string name="clean">Очистить</string>
    <string name="cancel">Отменить</string>
    <string name="ok">сохранить</string>
    <string name="disabled">Привычка уже обретена. Очистите или измените профиль для активизации</string>
    <string name="clearance">очистка данных</string>
    <string name="confidence">вы хотите удалить только данные опросника или также динамику веса и привычек?</string>
    <string name="quest_only">очистить опросник</string>
    <string name="clear_all">очистить все</string>
    <string name="set_end">Дата фиксации привычки</string>
    <string name="person">Профиль</string>
    <string name="habit">Привычки</string>
    <string name="weights">Вес</string>
    <string name="selector">Периодичность и время уведомлений</string>
    <string name="mo">пн</string>
    <string name="tue">вт</string>
    <string name="wed">ср</string>
    <string name="thu">чт</string>
    <string name="fri">пт</string>
    <string name="sat">сб</string>
    <string name="sun">вс</string>
    <string name="all">все</string>
    <string name="done">Сделано</string>
    <string name="fail">Неудача</string>
    <string name="success">Успех!</string>
    <string name="date">Дата</string>
    <string name="wrong_end">Установите корректный срок выработки привычки (в будущем)</string>
    <string name="confidence_short">вы хотите удалить весь прогресс привычек?</string>
    <string name="mass_info">\u0020до 16 : Выраженный дефицит массы тела\n
    16-18,5 : Дефицит массы тела\n
    18,5-25 : Норма\n
    25-30 : Предожирение\n
    30-35 : Ожирение 1 степени\n
    35-40 : Ожирение 2 степени\n
    40 и выше : Ожирение 3 степени</string>
    <string name="history">К истории</string>
    <string name="history_clearance">Очистка истории</string>
    <string name="history_confidence_short">Вы хотите удалить историю взвешиваний?</string>
    <string name="main_clearance">Очистите профиль на главной странице</string>
    <string name="help">Как это работает</string>
    <string name="settings">Настройки</string>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="month">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string-array name="period">
        <item>Все время</item>
        <item>6 месяцев</item>
        <item>3 месяца</item>
        <item>1 месяц</item>
        <item>!Очистить историю!</item>
    </string-array>

    <string name="helptext">ВАЖНО: Данное приложение не претендует на предсказание продолжительности жизни пользователя. Оно
        оценивает только СРЕДНЮЮ продолжительность жизни людей с датой рождения и привычками, как у пользователя.
        Три закладки нижней навигационной панели отвечают за три связанных между собой аспекта. В закладке ПРОФИЛЬ проводится начальное
        анкетирование и отображается средняя продолжительность жизни. Закладка ПРИВЫЧКИ позволяет отслеживать привычки пользователя, влияющие
        на продолжительность жизни: избавляться от вредных и приобретать полезные. Закладка ВЕС отслеживает вес пользователя и отображает
        историю его изменения. При этом данные всех трех закладок синхронизированы и обретение новой привычки или изменение веса влияют
        на данные профиля. Контроль за изменением привычек производится через оповещения. ВАЖНО: Перед использование этой функции убедитесь,
        что системные настройки этого приложения на конкретном устройстве разрешают автозапуск и позволяют получать оповещения в фоне. Для
        подтверждения прогресса в выработки привычки необходимо нажать на соответствующую кнопку в оповещении. ВАЖНО: Если кнопка не нажата,
        через какое-то время прогресс привычки будет сброшен. По умолчанию это время составляет 3 часа, но может быть изменено в настройках приложения.
        Также в настройках может быть изменен стандартный срок выработки привычки (по умолчанию 5 недель). Кроме того, для каждой конкретной привычки он
        может быть изменен вручную.<a href="https://pavka-memento.github.io/help">Больше информации здесь</a>
    </string>

    <string name="delay">Время реагирования на оповещения</string>
    <string name="period">Срок выработки привычки по умолчанию</string>
    <string name="weight_valid">Введите корректный вес (хотя бы больше 2 кг :))</string>
    <string name="back">Для выхода из приложения нажмите конпку НАЗАД дважды</string>
</resources>